# VGE-SurfaceReconstruction

./: .gitignore  CMakeLists.txt  README.md
Resources/Shaders/: mesh.frag  mesh.vert  primitive.frag  primitive.geom  primitive.vert  wireframe.frag  wireframe.vert
src/: CMakeLists.txt  CloudModel.cpp  CloudModel.h  CsgBox.cpp  CsgBox.h  CsgCone.cpp  CsgCone.h  CsgCube.cpp  CsgCube.h  CsgCylinder.cpp  CsgCylinder.h  CsgPrimitive.cpp  CsgPrimitive.h  CsgSphere.cpp  CsgSphere.h  CsgTree.cpp  CsgTree.h  CsgUtils.cpp  CsgUtils.h  DisjointSet.h  ExampleClouds.cpp  ExampleClouds.h  MCTable.h  MarchingCube.cpp  MarchingCube.h  main.cpp  marching_cubes_poisson2.h  multi_grid_octree_data2.h  multi_grid_octree_data2.hpp  octree_poisson2.h  poisson.cpp  poisson2.h  poisson2.hpp  reconstruction2.h  reconstruction2.hpp
